# artificer

./: readme.md
src/: CMakeLists.txt  artconf.cpp  artconf.hpp  artifice.hpp  cartifice.cpp  cartifice.h  framesource.cpp  framesource.hpp  gl.cpp  main.cpp
test/: default.fs  default.vs  defaultblit.vs  extra.fs  main.fs  test.lua
